--- a/src/dm5/style.module.css
+++ b/src/dm5/style.module.css
@@ -27,9 +27,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   justify-content: center;
   align-items: center;
 
-  &>img {
+  & > img {
     display: block;
-    margin: .5em .25em;
+    margin: 0.5em 0.25em;
     min-height: 30vh;
     min-width: 30vw;
     cursor: pointer;
