--- a/src/dm5/style.css
+++ b/src/dm5/style.css
@@ -43,3 +43,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #cp_image {
   display: none !important;
 }
+
+#barChapter > img {
+  cursor: unset !important;
+  border: 1px solid;
+}
